--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     //    compile 'com.facebook.android:facebook-android-sdk:4.29.0'
     testCompile 'junit:junit:4.12'
     compile project(':todaystepcounterlib')
