--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,10 +95,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver
             android:name=".MyReceiver"
             android:enabled="true"
             android:exported="true" />
+
+        <activity android:name=".HistoryActivity"></activity>
     </application>
 
 </manifest>
