--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ repositories {
 
 dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-v4:27.1.1'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -56,6 +58,8 @@ dependencies {
     compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:design:27.1.0'
+
     //    compile 'com.facebook.android:facebook-android-sdk:4.29.0'
     testCompile 'junit:junit:4.12'
     compile project(':todaystepcounterlib')
