--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,29 +40,29 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:27.1.1'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleCompatible
-    compile 'com.android.support:appcompat-v7:27.0.2'
-    compile 'com.android.support:cardview-v7:27.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-auth:11.8.0'
-    compile 'com.google.android.gms:play-services-auth:11.8.0'
-    compile 'com.android.support:design:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.android.support:design:27.0.2'
     implementation 'com.facebook.android:facebook-login:4.29.0'
-    compile 'com.google.firebase:firebase-firestore:11.8.0'
-    compile "de.hdodenhof:circleimageview:1.3.0"
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    compile 'com.google.android.gms:play-services:11.8.0'
-    compile 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.firebase:firebase-firestore:11.8.0'
+    implementation "de.hdodenhof:circleimageview:1.3.0"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    implementation 'com.google.android.gms:play-services:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:design:27.1.0'
 
-    //    compile 'com.facebook.android:facebook-android-sdk:4.29.0'
-    testCompile 'junit:junit:4.12'
-    compile project(':todaystepcounterlib')
+    //    implementation 'com.facebook.android:facebook-android-sdk:4.29.0'
+    testImplementation 'junit:junit:4.12'
+    implementation project(':todaystepcounterlib')
 }
 
 //"C:\Program Files\Java\jre1.8.0_111\bin\keytool" -exportcert -alias androiddebugkey -keystore ~/.android/debug.keystore | "C:\Users\16004118\Downloads\bin/openssl.exe" sha1 -binary | "C:\Users\16004118\Downloads\bin/openssl.exe" base64
